@@ -1,7 +1,14 @@
 2000-08-01  Bill White  <bill.white@griggsinst.com>
 
+	* swlibs/include/makefile.autoconf.am:
+		   Added CLEANFILES definition.
+
+	* makefile.autoconf.am:
+		   Added CLEANFILES definition.
+
 	* h5/glide3/src/makefile.autoconf.am:
 	           Changed include_headers to include_HEADERS.
+		   Added CLEANFILES definition.
 
 	* h3/makefile.autoconf.am:
 	           Added.
@@ -14,6 +21,7 @@
 
 	* configure.in:
 	           Changed the includedir to glide3 not glide3x.
+	           Added makefiles in h3/incsrc and cvg/incsrc
 	
 	* chores.3dfx:
 	           Changed --build-directory switch to work with
